--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,7 +45,7 @@ li {
     color: #ff4a4a;
 }
 
-.contents {
+.- {
     height: 800px;
     margin-top: 100px;
 }
@@ -59,7 +59,7 @@ li {
 
 .contents-item {
     float: left;
-    margin-right: 40px;
+    width: 50%;
 }
 
 .contents-item p {
