--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -9,7 +9,7 @@ li {
 .header {
     background-color: #4dd623;
     color: #fff;
-    height: 370px;
+    height: 200px;
 }
 
 .header-logo {
@@ -27,6 +27,7 @@ li {
     color: #fff;
     float: left;
     padding: 1vw 1vw;
+    font-size: 30px;
 }
 
 .main {
@@ -47,8 +48,9 @@ li {
 
 .contents {
     max-width: 100vw;
-    height: 13400px;
+    height: 13777.2px;
     margin-top: 100px;
+    font-size: 24px;
 }
 
 .section-title {
@@ -80,14 +82,16 @@ li {
     margin-right:3%;
     margin-left:2%;
     background-color: #1ec734;
-    overflow-y: scroll;
-
-    
-    background-color: #1ec734;
-    overflow-y: scroll;
 }
 
-/* contact-formのpadding-topを100pxにしてください */
+._24px{
+    height: 66.56px;
+    font-size: 24px;
+}
+
+.user{
+    height: 605px;
+}
 
 
 .footer {
@@ -114,4 +118,5 @@ li {
     color: #fff;
     float: left;
     padding: 1vw 1vw;
+    font-size: 30px;
 }
