--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -55,9 +55,10 @@ li {
 
 .section-title {
     border-bottom: 2px solid #dee7ec;
-    font-size: 28px;
+    font-size: 20px;
     padding-bottom: 15px;
     margin-bottom: 50px;
+    height: 800px;
 }
 
 .contents-item {
