--- a/stylesheet3.css
+++ b/stylesheet3.css
@@ -9,7 +9,7 @@ li {
 .header {
     background-color: #4dd623;
     color: #fff;
-    height: 370px;
+    height: 250px;
 }
 
 .header-logo {
@@ -27,6 +27,7 @@ li {
     color: #fff;
     float: left;
     padding: 1vw 1vw;
+    font-size: 30px;
 }
 
 .main {
@@ -47,15 +48,17 @@ li {
 
 .contents {
     max-width: 100vw;
-    height: 26200.8px;
+    height: 18800px;
     margin-top: 100px;
+    font-size: 24px;
 }
 
 .section-title {
     border-bottom: 2px solid #dee7ec;
-    font-size: 28px;
+    font-size: 20px;
     padding-bottom: 15px;
     margin-bottom: 50px;
+    height: 800px;
 }
 
 .contents-item {
@@ -64,30 +67,32 @@ li {
 }
 .contents-item1 {
     width: 30%;
-    height: 628*10px;
+    height: 18200px;
     float: left;
     margin-left:3%;
     margin-right:2%;
-    padding:5% 3%;
+    padding:3% 3%;
     background-color: #05395c;
 }
 .contents-item2 {
     width: 44%;
-    padding-top: 500px;
+    padding-top: 400px;
     padding-left: 2%;
     height: 628*10px;
     float: right;
     margin-right:3%;
     margin-left:2%;
     background-color: #1ec734;
-    overflow-y: scroll;
-
-    
-    background-color: #1ec734;
-    overflow-y: scroll;
 }
 
-/* contact-formのpadding-topを100pxにしてください */
+._24px{
+    height: 66.56px;
+    font-size: 24px;
+}
+
+.user{
+    height: 605px;
+}
 
 
 .footer {
@@ -109,8 +114,10 @@ li {
 .footer-list li {
     padding-bottom: 20px;
 }
+
 .footer-list a {
     color: #fff;
     float: left;
     padding: 1vw 1vw;
+    font-size: 30px;
 }
